@startuml

left to right direction

class Room {
  name: String
  icon: String
  create_room(Room)
}

class Device {
  name: String
  icon: String
  state: Boolean
  room: Room[]
  create_device(Device)
  toggle_state(Device)
}

class Scene {
  name: String
  state: Boolean
  in_progress: Boolean
  create_scene(Scene)
}

class Task {
  device: Device[]
  scene: Scene[]
  active: Boolean
  action: Boolean
  timer: Integer
  order: Integer
  create_task(Task)
  update_task(Task)
}

Room *-- Device
Device --o Scene
Scene *-right- Task

@enduml
